[package]
name = "smql"
version = "0.1.0"
edition = "2021"
authors = ["Nebojsa Jakovljevic nebojsa@nebjak.dev"]
license = "MIT"
description = "smol message queue"

[[bin]]
name = "smql"
path = "src/main.rs"

[dependencies]
uuid = { version = "1.18", features = ["v7", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
tokio = { version = "1.48" , features = ["full"]}
axum = "0.8.6"
skyak_axum_core = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde_json = "1.0.145"
tower-http = { version = "0.5.2", features = ["cors"] }